Created empty auto commands to be written once claw, elevator, and rotationArm sybsystems are done